fix: remove horizontal scrolling on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,11 +19,17 @@ body {
 }
 
 .page-content {
-  margin: 0 20px;
   max-width: 420px;
 }
 
 section.hero {
+
+  // https://github.com/jgthms/bulma/issues/766
+  .columns {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   #header {
     margin-top: 50%;
     margin-bottom: 30%;
